--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.mysql-connector-java-8.0.15.jar=mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-bin.jar=web\\WEB-INF\\lib\\mysql-connector-java-bin.jar
+file.reference.tomcat-dbcp.jar=tomcat-dbcp.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,7 +40,10 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.15.jar}:\
+    ${file.reference.tomcat-dbcp.jar}:\
+    ${file.reference.mysql-connector-java-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
