--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.esapi-2.0.1.jar=web\\WEB-INF\\lib\\esapi-2.0.1.jar
 file.reference.mysql-connector-java-bin.jar=web\\WEB-INF\\lib\\mysql-connector-java-bin.jar
 file.reference.tomcat-dbcp.jar=tomcat-dbcp.jar
 includes=**
@@ -41,7 +42,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.tomcat-dbcp.jar}:\
-    ${file.reference.mysql-connector-java-bin.jar}
+    ${file.reference.mysql-connector-java-bin.jar}:\
+    ${libs.esapi.classpath}:\
+    ${file.reference.esapi-2.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
